more modifications has been made

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <div class="text-1">Hello, my name is</div>
           <div class="text-2">Mahi Abdulhakim</div>
           <div class="text-3">Welcome to <span class="typing"></span></div>
-          <a href="#" class="btn btn-primary btn-lg" href="#">Log In</a>
+          <a href="#" class="btn btn-success btn-lg" href="#">Log In</a>
         </div>
       </div>
       <!-- HOME SECTION ENDS -->
@@ -88,6 +88,9 @@
               times. If you want to Know more about me more click the button
               bellow to contact me
             </p>
+            <a href="Intrests/intrest.html" class="btn btn-primary btn-lg"
+              >My Intrests</a
+            >
           </div>
         </div>
       </div>
@@ -96,10 +99,10 @@
 
     <!-- FOOTER SECTION STARTS -->
     <footer>
-      <span
-        >Designed by <a href="#">Mahi Abdulhakim</a> |
-        <span class="far fa-copyright"></span> 2020 All rights reserved.</span
-      >
+      <span>
+        Designed by <a href="/intrests/intrest.html">Mahi Abdulhakim</a> |
+        <span class="far fa-copyright"></span> 2022 All rights reserved.
+      </span>
     </footer>
     <!-- FOOTER SECTION ENDS -->
 
