edited some texts

--- a/intrests/intrest.html
+++ b/intrests/intrest.html
@@ -119,8 +119,8 @@
               <h2>Travel</h2>
               <p>
                 Another passsioin that i have is to travel lots of places as
-                much as i can.I have a bucket list of the places i want to
-                travel and i will dedicate all my works i do to travel those
+                much as i can.I have a bucket list of the places i want to visit
+                and i will dedicate all my works to be able to travel those
                 places and explore new culture
               </p>
               <a href="#travel" class="btn btn-success btn-lg">More</a>
@@ -266,7 +266,7 @@
       <div class="container">
         <div class="row">
           <div class="section-title">
-            <h1>LIST TO TRAVEL ON MY BUCKET</h1>
+            <h1>LIST TO TRAVEL ON MY BUCKET LIST</h1>
           </div>
         </div>
         <div class="row">
