Added Resume Page
also link is include to other pages as well to redirect to the CV page

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         </div>
         <ul class="menu">
           <li><a href="index.html" class="menu-btn">Home</a></li>
-          <li><a href="#" class="menu-btn">My Cv</a></li>
+          <li><a href="CV/Cv.html" class="menu-btn">My Cv</a></li>
           <li><a href="#" class="menu-btn">Ethiopia</a></li>
           <li><a href="#" class="menu-btn">Tourisms</a></li>
-          <li><a href="#" class="menu-btn">Contact</a></li>
+          <li><a href="Contact/contact.html" class="menu-btn">Contact</a></li>
         </ul>
         <div class="menu-btn">
           <i class="fas fa-bars"></i>
@@ -100,7 +100,7 @@
     <!-- FOOTER SECTION STARTS -->
     <footer>
       <span>
-        Designed by <a href="/intrests/intrest.html">Mahi Abdulhakim</a> |
+        Designed by <a href="/Contact/contact.html">Mahi Abdulhakim</a> |
         <span class="far fa-copyright"></span> 2022 All rights reserved.
       </span>
     </footer>
