--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -31,7 +31,7 @@
           </div>
           <ul class="menu">
             <li><a href="/" class="menu-btn">Home</a></li>
-            <li><a href="#" class="menu-btn">My Cv</a></li>
+            <li><a href="../CV/Cv.html" class="menu-btn">My Cv</a></li>
             <li><a href="#" class="menu-btn">Ethiopia</a></li>
             <li>
               <a href="#" class="menu-btn">Tourisms</a>
@@ -87,7 +87,18 @@
                 </div>
               </div>
               <div class="row">
-                <i class="fas fa-envelope"></i>
+                <a href="https://www.instagram.com/silver_shad3/" class="fourth"
+                  ><i class="fab fa-instagram"></i
+                ></a>
+                <div class="info">
+                  <div class="head">Instagram</div>
+                  <div class="sub-title">Silver_shad3</div>
+                </div>
+              </div>
+              <div class="row">
+                <a href="mailto:mahiabdul20@gmail.com"
+                  ><i class="fas fa-envelope"></i
+                ></a>
                 <div class="info">
                   <div class="head">Email</div>
                   <div class="sub-title">mahiabdul20@gmail.com</div>
@@ -98,7 +109,10 @@
 
           <div class="column right">
             <div class="text">Message me</div>
-            <form action="#">
+            <form
+              action="https://formsubmit.co/3c8b0efbdd8eccc2a6cbbbf3edbfd0a6"
+              method="POST"
+            >
               <div class="fields">
                 <div class="field name">
                   <input type="text" placeholder="Name" required />
