--- a/intrests/intrest.html
+++ b/intrests/intrest.html
@@ -36,13 +36,13 @@
         </div>
         <ul class="menu">
           <li><a href="/" class="menu-btn">Home</a></li>
-          <li><a href="#" class="menu-btn">My Cv</a></li>
+          <li><a href="../CV/Cv.html" class="menu-btn">My Cv</a></li>
           <li><a href="#" class="menu-btn">Ethiopia</a></li>
           <li>
             <a href="#" class="menu-btn">Tourisms</a>
           </li>
           <li>
-            <a href="#" class="menu-btn">Contact</a>
+            <a href="../Contact/contact.html" class="menu-btn">Contact</a>
           </li>
         </ul>
       </div>
@@ -181,7 +181,9 @@
               so on... if you want to ask other information click the contact me
               button to reach me.
             </p>
-            <a href="#about" class="btn btn-warning btn-lg">Contact Me</a>
+            <a href="../Contact/contact.html" class="btn btn-warning btn-lg"
+              >Contact Me</a
+            >
           </div>
         </div>
       </div>
