Added a Heritage Page
also added a link to redirect to the tourism page on the other page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <li><a href="index.html" class="menu-btn">Home</a></li>
           <li><a href="CV/Cv.html" class="menu-btn">My Cv</a></li>
           <li><a href="#" class="menu-btn">Ethiopia</a></li>
-          <li><a href="#" class="menu-btn">Tourisms</a></li>
+          <li><a href="Tourism/tourism.html" class="menu-btn">Tourisms</a></li>
           <li><a href="Contact/contact.html" class="menu-btn">Contact</a></li>
         </ul>
         <div class="menu-btn">
