--- a/intrests/intrest.html
+++ b/intrests/intrest.html
@@ -39,7 +39,7 @@
           <li><a href="../CV/Cv.html" class="menu-btn">My Cv</a></li>
           <li><a href="#" class="menu-btn">Ethiopia</a></li>
           <li>
-            <a href="#" class="menu-btn">Tourisms</a>
+            <a href="../Tourism/tourism.html" class="menu-btn">Tourisms</a>
           </li>
           <li>
             <a href="../Contact/contact.html" class="menu-btn">Contact</a>
