--- a/CV/Cv.html
+++ b/CV/Cv.html
@@ -35,7 +35,7 @@
         <li><a href="#" class="menu-btn">My Cv</a></li>
         <li><a href="#" class="menu-btn">Ethiopia</a></li>
         <li>
-          <a href="#" class="menu-btn">Tourisms</a>
+          <a href="../Tourism/tourism.html" class="menu-btn">Tourisms</a>
         </li>
         <li><a href="../Contact/contact.html" class="menu-btn">Contact</a></li>
       </ul>
