--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -34,7 +34,7 @@
             <li><a href="../CV/Cv.html" class="menu-btn">My Cv</a></li>
             <li><a href="#" class="menu-btn">Ethiopia</a></li>
             <li>
-              <a href="#" class="menu-btn">Tourisms</a>
+              <a href="../Tourism/tourism.html" class="menu-btn">Tourisms</a>
             </li>
             <li><a href="#" class="menu-btn">Contact</a></li>
           </ul>
