--- a/intrests/intrest.html
+++ b/intrests/intrest.html
@@ -10,6 +10,12 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+    />
+    <script src="/Intrests/intrest.js" defer></script>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
@@ -336,6 +342,34 @@
       </div>
     </section>
     <!-- TRAVEL SECTION ENDS -->
+
+    <!----------------------------PHOTO API------------------------->
+    <div class="col-12 padding heading"></div>
+    <div class="contain api">
+      <br />
+      <h1 style="margin-left: 30%">Mini Photo Search</h1>
+      <br />
+      <form id="form" autocomplete="off">
+        <div class="form-group col-md-6">
+          <input
+            type="text"
+            class="form-control"
+            id="search"
+            placeholder="Search for free photos..."
+          />
+        </div>
+        <div class="form-group col-md-6 center">
+          <input type="submit" class="btn btn-danger" value="search" />
+        </div>
+      </form>
+
+      <div class="row">
+        <div class="col-md-12">
+          <div id="images"></div>
+        </div>
+      </div>
+    </div>
+
     <!-- FOOTER SECTION STARTS -->
     <footer>
       <span
