--- a/CV/Cv.html
+++ b/CV/Cv.html
@@ -31,9 +31,9 @@
         <a href="/"><span>🏚</span></a>
       </div>
       <ul class="menu">
-        <li><a href="/" class="menu-btn">Home</a></li>
+        <li><a href="../index.html" class="menu-btn">Home</a></li>
         <li><a href="#" class="menu-btn">My Cv</a></li>
-        <li><a href="#" class="menu-btn">Ethiopia</a></li>
+        <li><a href="../My Country/Mycountry.html" class="menu-btn">Ethiopia</a></li>
         <li>
           <a href="../Tourism/tourism.html" class="menu-btn">Tourisms</a>
         </li>
