--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -27,12 +27,16 @@
       <nav class="navbar">
         <div class="max-width">
           <div class="logo">
-            <a href="/"><span>🏚</span></a>
+            <a href="../index.html"><span>🏚</span></a>
           </div>
           <ul class="menu">
-            <li><a href="/" class="menu-btn">Home</a></li>
+            <li><a href="../index.html" class="menu-btn">Home</a></li>
             <li><a href="../CV/Cv.html" class="menu-btn">My Cv</a></li>
-            <li><a href="#" class="menu-btn">Ethiopia</a></li>
+            <li>
+              <a href="../My Country/Mycountry.html" class="menu-btn"
+                >Ethiopia</a
+              >
+            </li>
             <li>
               <a href="../Tourism/tourism.html" class="menu-btn">Tourisms</a>
             </li>
