--- a/Tourism/tourism.html
+++ b/Tourism/tourism.html
@@ -25,9 +25,9 @@
         <a href="/">Ethio<span>Trek.</span></a>
       </div>
       <ul class="menu">
-        <li><a href="/" class="menu-btn">Home</a></li>
+        <li><a href="../index.html" class="menu-btn">Home</a></li>
         <li><a href="../CV/Cv.html" class="menu-btn">My Cv</a></li>
-        <li><a href="#" class="menu-btn">Ethiopia</a></li>
+        <li><a href="../My Country/Mycountry.html" class="menu-btn">Ethiopia</a></li>
         <li><a href="#" class="menu-btn">Tourisms</a></li>
         <li><a href="../Contact/contact.html" class="menu-btn">Contact</a></li>
       </ul>
