--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
           <a href="#">Ethio<span>Trek.</span></a>
         </div>
         <ul class="menu">
-          <li><a href="index.html" class="menu-btn">Home</a></li>
+          <li><a href="/" class="menu-btn">Home</a></li>
           <li><a href="CV/Cv.html" class="menu-btn">My Cv</a></li>
-          <li><a href="#" class="menu-btn">Ethiopia</a></li>
+          <li>
+            <a href="My Country/Mycountry.html" class="menu-btn">Ethiopia</a>
+          </li>
           <li><a href="Tourism/tourism.html" class="menu-btn">Tourisms</a></li>
           <li><a href="Contact/contact.html" class="menu-btn">Contact</a></li>
         </ul>
@@ -88,7 +90,7 @@
               times. If you want to Know more about me more click the button
               bellow to contact me
             </p>
-            <a href="Intrests/intrest.html" class="btn btn-primary btn-lg"
+            <a href="../intrests/intrest.html" class="btn btn-primary btn-lg"
               >My Intrests</a
             >
           </div>
@@ -100,12 +102,12 @@
     <!-- FOOTER SECTION STARTS -->
     <footer>
       <span>
-        Designed by <a href="/Contact/contact.html">Mahi Abdulhakim</a> |
+        Designed by <a href="../Contact/contact.html">Mahi Abdulhakim</a> |
         <span class="far fa-copyright"></span> 2022 All rights reserved.
       </span>
     </footer>
     <!-- FOOTER SECTION ENDS -->
 
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
   </body>
 </html>
