--- a/CV/Cv.html
+++ b/CV/Cv.html
@@ -23,12 +23,11 @@
     <title>MY CV</title>
   </head>
 <body>
-
    <!-- NAVIGATOR BAR START -->
    <nav class="navbar">
     <div class="max-width">
       <div class="logo">
-        <a href="/"><span>🏚</span></a>
+        <a href="../index.html"><span>🏚</span></a>
       </div>
       <ul class="menu">
         <li><a href="../index.html" class="menu-btn">Home</a></li>
