--- a/Tourism/tourism.html
+++ b/Tourism/tourism.html
@@ -15,14 +15,13 @@
   <title>Heritage</title>
 </head>
 <body>
-  
   <section class = "intro">
 
     <!-- NAVIGATOR BAR START -->
   <nav class="navbar">
     <div class="max-width">
       <div class="logo">
-        <a href="/">Ethio<span>Trek.</span></a>
+        <a href="../index.html">Ethio<span>Trek.</span></a>
       </div>
       <ul class="menu">
         <li><a href="../index.html" class="menu-btn">Home</a></li>
