--- a/intrests/intrest.html
+++ b/intrests/intrest.html
@@ -34,11 +34,10 @@
   </head>
   <body>
     <!-- NAVIGATOR-BAR STARTS -->
-
     <nav class="navbar">
       <div class="max-width">
         <div class="logo">
-          <a href="/"><span>🏚</span></a>
+          <a href="../index.html"><span>🏚</span></a>
         </div>
         <ul class="menu">
           <li><a href="../index.html" class="menu-btn">Home</a></li>
