--- a/contact.html
+++ b/contact.html
@@ -15,10 +15,10 @@
     <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-    <script src="../script.js" defer></script>
-    <link rel="stylesheet" href="../Contact/contact.css" />
-    <link rel="stylesheet" type="text/css" href="../Styles/footer.css" />
-    <link rel="stylesheet" href="../Styles/navbar.css" />
+    <script src="./js/script.js" defer></script>
+    <link rel="stylesheet" href="./Styles/contact.css" />
+    <link rel="stylesheet" type="text/css" href="./Styles/navbar.css" />
+    <link rel="stylesheet" href="./Styles/footer.css" />
     <title>Contact-Me</title>
   </head>
   <body>
@@ -27,18 +27,16 @@
       <nav class="navbar">
         <div class="max-width">
           <div class="logo">
-            <a href="../index.html"><span>🏚</span></a>
+            <a href="./index.html"><span>🏚</span></a>
           </div>
           <ul class="menu">
-            <li><a href="../index.html" class="menu-btn">Home</a></li>
-            <li><a href="../CV/Cv.html" class="menu-btn">My Cv</a></li>
+            <li><a href="./index.html" class="menu-btn">Home</a></li>
+            <li><a href="./Cv.html" class="menu-btn">My Cv</a></li>
             <li>
-              <a href="../My Country/Mycountry.html" class="menu-btn"
-                >Ethiopia</a
-              >
+              <a href="./Mycountry.html" class="menu-btn">Ethiopia</a>
             </li>
             <li>
-              <a href="../Tourism/tourism.html" class="menu-btn">Tourisms</a>
+              <a href="./tourism.html" class="menu-btn">Tourisms</a>
             </li>
             <li><a href="#" class="menu-btn">Contact</a></li>
           </ul>
@@ -145,7 +143,7 @@
     <!-- FOOTER SECTION STARTS -->
     <footer>
       <span
-        >Designed by <a href="../Intrests/intrest.html">Mahi Abdulhakim</a> |
+        >Designed by <a href="#">Mahi Abdulhakim</a> |
         <span class="far fa-copyright"></span> 2022 All rights reserved.</span
       >
     </footer>
