--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./Styles/style.css" />
   </head>
   <!-- HEAD ENDS -->
   <body>
@@ -30,13 +30,15 @@
           <a href="#">Ethio<span>Trek.</span></a>
         </div>
         <ul class="menu">
-          <li><a href="/" class="menu-btn">Home</a></li>
-          <li><a href="CV/Cv.html" class="menu-btn">My Cv</a></li>
+          <li><a href="#" class="menu-btn">Home</a></li>
+          <li><a href="./Cv.html" class="menu-btn">My Cv</a></li>
           <li>
-            <a href="My Country/Mycountry.html" class="menu-btn">Ethiopia</a>
+            <a href="./Mycountry.html" class="menu-btn">Ethiopia</a>
           </li>
-          <li><a href="Tourism/tourism.html" class="menu-btn">Tourisms</a></li>
-          <li><a href="Contact/contact.html" class="menu-btn">Contact</a></li>
+          <li>
+            <a href="./tourism.html" class="menu-btn">Tourisms</a>
+          </li>
+          <li><a href="./contact.html" class="menu-btn">Contact</a></li>
         </ul>
         <div class="menu-btn">
           <i class="fas fa-bars"></i>
@@ -52,7 +54,7 @@
           <div class="text-1">Hello, my name is</div>
           <div class="text-2">Mahi Abdulhakim</div>
           <div class="text-3">Welcome to <span class="typing"></span></div>
-          <a href="#" class="btn btn-success btn-lg" href="#">Log In</a>
+          <a href="#" class="btn btn-success btn-lg">Log In</a>
         </div>
       </div>
       <!-- HOME SECTION ENDS -->
@@ -70,7 +72,7 @@
         <h2 class="title">About me</h2>
         <div class="about-content">
           <div class="column left">
-            <img src="images/you.jpg" alt="" />
+            <img src="./images/you.jpg" alt="" />
           </div>
           <div class="column right">
             <div class="text">
@@ -89,7 +91,7 @@
               times. If you want to Know more about me more click the button
               bellow to contact me
             </p>
-            <a href="../intrests/intrest.html" class="btn btn-primary btn-lg"
+            <a href="./intrest.html" class="btn btn-primary btn-lg"
               >My Intrests</a
             >
           </div>
@@ -101,12 +103,12 @@
     <!-- FOOTER SECTION STARTS -->
     <footer>
       <span>
-        Designed by <a href="../Contact/contact.html">Mahi Abdulhakim</a> |
+        Designed by <a href="./contact.html">Mahi Abdulhakim</a> |
         <span class="far fa-copyright"></span> 2022 All rights reserved.
       </span>
     </footer>
     <!-- FOOTER SECTION ENDS -->
 
-    <script src="/script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
