--- a/Cv.html
+++ b/Cv.html
@@ -16,10 +16,10 @@
     />
     <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="../script.js" defer></script>
-    <link rel="stylesheet" href="cv.css" />
-    <link rel="stylesheet" type="text/css" href="../Styles/footer.css" />
-    <link rel="stylesheet" href="../Styles/navbar.css" />
+    <script src="./js/script.js" defer></script>
+    <link rel="stylesheet" href="./Styles/Cv.css" />
+    <link rel="stylesheet" type="text/css" href="./Styles/footer.css" />
+    <link rel="stylesheet" href="./Styles/navbar.css" />
     <title>MY CV</title>
   </head>
 <body>
@@ -27,16 +27,16 @@
    <nav class="navbar">
     <div class="max-width">
       <div class="logo">
-        <a href="../index.html"><span>🏚</span></a>
+        <a href="./index.html"><span>🏚</span></a>
       </div>
       <ul class="menu">
-        <li><a href="../index.html" class="menu-btn">Home</a></li>
+        <li><a href="./index.html" class="menu-btn">Home</a></li>
         <li><a href="#" class="menu-btn">My Cv</a></li>
-        <li><a href="../My Country/Mycountry.html" class="menu-btn">Ethiopia</a></li>
+        <li><a href="./Mycountry.html" class="menu-btn">Ethiopia</a></li>
         <li>
-          <a href="../Tourism/tourism.html" class="menu-btn">Tourisms</a>
+          <a href="./tourism.html" class="menu-btn">Tourisms</a>
         </li>
-        <li><a href="../Contact/contact.html" class="menu-btn">Contact</a></li>
+        <li><a href="./contact.html" class="menu-btn">Contact</a></li>
       </ul>
       <div class="menu-btn">
         <i class="fas fa-bars"></i>
@@ -104,7 +104,7 @@
     <!-- FOOTER SECTION STARTS -->
     <footer>
       <span
-        >Designed by <a href="../intrests/intrest.html">Mahi Abdulhakim</a> |
+        >Designed by <a href="./contact.html">Mahi Abdulhakim</a> |
         <span class="far fa-copyright"></span> 2022 All rights reserved.</span
       >
     </footer>
