--- a/intrest.html
+++ b/intrest.html
@@ -14,8 +14,6 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
     />
-    <script src="/Intrests/intrest.js" defer></script>
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
@@ -27,9 +25,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <script src="../script.js" defer></script>
-    <link rel="stylesheet" type="text/css" href="../Styles/footer.css" />
-    <link rel="stylesheet" type="text/css" href="intrest.css" />
+    <script src="./js/script.js" defer></script>
+    <link rel="stylesheet" type="text/css" href="./Styles/navbar.css" />
+    <link rel="stylesheet" type="text/css" href="./Styles/intrest.css" />
+    <link rel="stylesheet" type="text/css" href="./Styles/footer.css" />
+    <script src="./js/intrest.js" defer></script>
+
     <title>My-Intrest</title>
   </head>
   <body>
@@ -37,19 +38,19 @@
     <nav class="navbar">
       <div class="max-width">
         <div class="logo">
-          <a href="../index.html"><span>🏚</span></a>
+          <a href="./index.html"><span>🏚</span></a>
         </div>
         <ul class="menu">
-          <li><a href="../index.html" class="menu-btn">Home</a></li>
-          <li><a href="../CV/Cv.html" class="menu-btn">My Cv</a></li>
+          <li><a href="./index.html" class="menu-btn">Home</a></li>
+          <li><a href="./Cv.html" class="menu-btn">My Cv</a></li>
           <li>
-            <a href="../My Country/Mycountry.html" class="menu-btn">Ethiopia</a>
+            <a href="./Mycountry.html" class="menu-btn">Ethiopia</a>
           </li>
           <li>
-            <a href="../Tourism/tourism.html" class="menu-btn">Tourisms</a>
+            <a href="./tourism.html" class="menu-btn">Tourisms</a>
           </li>
           <li>
-            <a href="../Contact/contact.html" class="menu-btn">Contact</a>
+            <a href="./contact.html" class="menu-btn">Contact</a>
           </li>
         </ul>
       </div>
@@ -90,7 +91,7 @@
         <div class="carousel-inner">
           <div
             class="carousel-item active"
-            style="background-image: url('img/slide-1.jpg')"
+            style="background-image: url('./images/slide-1.jpg')"
           >
             <div class="container">
               <h2>This is Mahi</h2>
@@ -104,7 +105,7 @@
           </div>
           <div
             class="carousel-item"
-            style="background-image: url('img/slide-2.jpg')"
+            style="background-image: url('./images/slide-2.jpg')"
           >
             <div class="container">
               <h2>Gaming Passion</h2>
@@ -120,7 +121,7 @@
           </div>
           <div
             class="carousel-item"
-            style="background-image: url('img/slide-3.jpg')"
+            style="background-image: url('./images/slide-3.jpg')"
           >
             <div class="container">
               <h2>Travel</h2>
@@ -165,7 +166,7 @@
           <div class="about-img">
             <div class="img-box">
               <div class="shape-02"></div>
-              <img src="img/ME.jpg" alt="about me" />
+              <img src="./images/ME.jpg" alt="about me" />
             </div>
           </div>
           <div class="about-content">
@@ -188,7 +189,7 @@
               so on... if you want to ask other information click the contact me
               button to reach me.
             </p>
-            <a href="../Contact/contact.html" class="btn btn-warning btn-lg"
+            <a href="./contact.html" class="btn btn-warning btn-lg"
               >Contact Me</a
             >
           </div>
@@ -208,7 +209,7 @@
           <!-- Item Start -->
           <div class="content-item">
             <div class="content-item-inner">
-              <img src="img/GTAV.jpg" alt="game" />
+              <img src="./images/GTAV.jpg" alt="game" />
               <div class="overlay">
                 <h4>Grand Theft Auto V</h4>
               </div>
@@ -218,7 +219,7 @@
           <!-- item Start -->
           <div class="content-item">
             <div class="content-item-inner">
-              <img src="img/NFS.jpg" alt="game" />
+              <img src="./images/NFS.jpg" alt="game" />
               <div class="overlay">
                 <h4>NEED FOR SPEED</h4>
               </div>
@@ -228,7 +229,7 @@
           <!-- Item Start -->
           <div class="content-item">
             <div class="content-item-inner">
-              <img src="img/GODOFWAR.jpg" alt="game" />
+              <img src="./images/GODOFWAR.jpg" alt="game" />
               <div class="overlay">
                 <h4>GOD OF WAR</h4>
               </div>
@@ -238,7 +239,7 @@
           <!-- Item Start -->
           <div class="content-item">
             <div class="content-item-inner">
-              <img src="img/PUBG.jpg" alt="game" />
+              <img src="./images/PUBG.jpg" alt="game" />
               <div class="overlay">
                 <h4>PUBG</h4>
               </div>
@@ -248,7 +249,7 @@
           <!-- Item Start -->
           <div class="content-item">
             <div class="content-item-inner">
-              <img src="img/UNCHARTED.jpg" alt="game" />
+              <img src="./images/UNCHARTED.jpg" alt="game" />
               <div class="overlay">
                 <h4>UNCHARTED</h4>
               </div>
@@ -258,7 +259,7 @@
           <!-- Item Start -->
           <div class="content-item">
             <div class="content-item-inner">
-              <img src="img/REDDEAD.jpg" alt="game" />
+              <img src="./images/REDDEAD.jpg" alt="game" />
               <div class="overlay">
                 <h4>READ DEAD REDEMPTION</h4>
               </div>
@@ -282,7 +283,7 @@
           <!-- Item Start -->
           <div class="content-item">
             <div class="content-item-inner">
-              <img src="img/MECCA.jpg" alt="travel" />
+              <img src="./images/MECCA.jpg" alt="travel" />
               <div class="overlay">
                 <h4>MECCA</h4>
               </div>
@@ -292,7 +293,7 @@
           <!-- item Start -->
           <div class="content-item">
             <div class="content-item-inner">
-              <img src="img/ISTANBUL.jpg" alt="travel" />
+              <img src="./images/ISTANBUL.jpg" alt="travel" />
               <div class="overlay">
                 <h4>ISTANBUL</h4>
               </div>
@@ -302,7 +303,7 @@
           <!-- Item Start -->
           <div class="content-item">
             <div class="content-item-inner">
-              <img src="img/NEWYORK.jpg" alt="travel" />
+              <img src="./images/NEWYORK.jpg" alt="travel" />
               <div class="overlay">
                 <h4>NEW YORK</h4>
               </div>
@@ -312,7 +313,7 @@
           <!-- Item Start -->
           <div class="content-item">
             <div class="content-item-inner">
-              <img src="img/JAPAN.jpg" alt="travel" />
+              <img src="./images/JAPAN.jpg" alt="travel" />
               <div class="overlay">
                 <h4>JAPAN</h4>
               </div>
@@ -322,7 +323,7 @@
           <!-- Item Start -->
           <div class="content-item">
             <div class="content-item-inner">
-              <img src="img/SWITZERLAND.jpg" alt="travel" />
+              <img src="./images/SWITZERLAND.jpg" alt="travel" />
               <div class="overlay">
                 <h4>SWITZERLAND</h4>
               </div>
@@ -332,7 +333,7 @@
           <!-- Item Start -->
           <div class="content-item">
             <div class="content-item-inner">
-              <img src="img/THAILAND.jpg" alt="travel" />
+              <img src="./images/THAILAND.jpg" alt="travel" />
               <div class="overlay">
                 <h4>THAILAND</h4>
               </div>
@@ -373,8 +374,8 @@
 
     <!-- FOOTER SECTION STARTS -->
     <footer>
-      <span
-        >Designed by <a href="#">Mahi Abdulhakim</a> |
+      <span>
+        Designed by <a href="#">Mahi Abdulhakim</a> |
         <span class="far fa-copyright"></span> 2022 All rights reserved.</span
       >
     </footer>
