--- a/tourism.html
+++ b/tourism.html
@@ -5,15 +5,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link rel = stylesheet type = "text/css" href = "tourism.css">
-  <link rel = stylesheet type="text/css" href="../Styles/navbar.css">
+  <link rel = stylesheet type = "text/css" href = "./Styles/tourism.css">
+  <link rel = stylesheet type="text/css" href="./Styles/navbar.css">
+  <link rel = stylesheet type="text/css" href="./Styles/footer.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-  <link rel = stylesheet type="text/css" href="../Styles/footer.css">
 
- 
   <title>Heritage</title>
+
 </head>
+
 <body>
   <section class = "intro">
 
@@ -21,14 +22,14 @@
   <nav class="navbar">
     <div class="max-width">
       <div class="logo">
-        <a href="../index.html">Ethio<span>Trek.</span></a>
+        <a href="./index.html">Ethio<span>Trek.</span></a>
       </div>
       <ul class="menu">
-        <li><a href="../index.html" class="menu-btn">Home</a></li>
-        <li><a href="../CV/Cv.html" class="menu-btn">My Cv</a></li>
-        <li><a href="../My Country/Mycountry.html" class="menu-btn">Ethiopia</a></li>
+        <li><a href="./index.html" class="menu-btn">Home</a></li>
+        <li><a href="./Cv.html" class="menu-btn">My Cv</a></li>
+        <li><a href="./Mycountry.html" class="menu-btn">Ethiopia</a></li>
         <li><a href="#" class="menu-btn">Tourisms</a></li>
-        <li><a href="../Contact/contact.html" class="menu-btn">Contact</a></li>
+        <li><a href="./contact.html" class="menu-btn">Contact</a></li>
       </ul>
       <div class="menu-btn">
         <i class="fas fa-bars"></i>
@@ -81,7 +82,7 @@
           There are several ruins in the ancient city that include royal tombs, ancient castle ruins, monolithic obelisks, and giant stelae.</p>
     </div>
     <div class="col-md-5">
-      <img src="../images/axum.jpg" width="400" height="auto">
+      <img src="./images/axum.jpg" width="400" height="auto">
 
     </div>
   </div>
@@ -90,7 +91,7 @@
 
   <div class="row featurette">
       <div class="col-md-5 order-md-1">
-          <img src="../images/fasil.jpg" width="400" height="auto">
+          <img src="./images/fasil.jpg" width="400" height="auto">
         </div>
     <div class="col-md-7 order-md-2">
       <h2 class="featurette-heading">Fasil Ghebbi<span class="muted"> ፋሲል ግቢ</span></h2>
@@ -107,7 +108,7 @@
       <p class="lead">Located in the town of Wukro, 790 kilometers (over 490 miles) north of Ethiopia's capital Addis Ababa, Al-Nejashi is said to be the first mosque in Africa. It is named after Nejashi, who hosted companions of the Prophet who escaped persecution in Mecca. </p>
     </div>
     <div class="col-md-5">
-      <img src="../images/nejashi.jpeg" width="400" height="auto">
+      <img src="./images/nejashi.jpeg" width="400" height="auto">
 
     </div>
   </div>
@@ -115,7 +116,7 @@
   <hr class="featurette-divider">
   <div class="row featurette">
       <div class="col-md-5">
-          <img src="../images/Harar.jpg" width="400" height="auto">
+          <img src="./images/Harar.jpg" width="400" height="auto">
   
         </div>
         <div class="col-md-7">
@@ -142,12 +143,12 @@
        <!-- FOOTER SECTION STARTS -->
     <footer>
       <span
-        >Designed by <a href="../Intrests/intrest.html">Mahi Abdulhakim</a> |
+        >Designed by <a href="./contact.html">Mahi Abdulhakim</a> |
         <span class="far fa-copyright"></span> 2022 All rights reserved.</span
       >
     </footer>
     <!-- FOOTER SECTION ENDS -->
   
-  <script src = "../script.js" defer> </script>
+  <script src = "./js/script.js" defer> </script>
 </body>
 </html>
