type error correction

--- a/contact.html
+++ b/contact.html
@@ -68,11 +68,12 @@
           <div class="column left">
             <div class="text">Get in Touch</div>
             <p>
-              Once upon a time there was a child called Mahi. He lived in
+              Once upon a time, there was a child called Mahi. He lived in
               Ethiopia, Harar. Graduated in Highschool And Now Making his Degree
-              On Computer Science. Legends says that he will be the greatest
-              Program to ever live.
+              On Computer Science. Legends say that he will be the greatest
+              Programmer to ever lived.
             </p>
+
             <div class="icons">
               <div class="row">
                 <i class="fas fa-user"></i>
