--- a/index.html
+++ b/index.html
@@ -79,17 +79,17 @@
               I'm Mahi Abdulhakim and I like <span class="typing-2"></span>
             </div>
             <p>
-              You have finally came to read this.Hi😊 my name Mahi and I am from
-              Ethiopia. you might be wondering how old i am, I am old enough to
-              develop such a beautiful Website. I would like to take this chance
-              to say that Programming is so fun and Enjoyable
+              You have finally come to read this.Hi😊 my name is Mahi and I am
+              from Ethiopia. you might be wondering how old I am, I am old
+              enough to develop such a beautiful Website. I want to take this
+              chance to say that Programming is so fun and Enjoyable.
               <br />
-              If i explain my hobbies shortly i like to play video games🎮 very
-              much and i also like to take pictures and edit them. I would like
-              to be photographer📸 one day. i also like to play Football very
-              much⚽.Phew..🤧 football has caused me lot of injuries in my life
-              times. If you want to Know more about me more click the button
-              bellow to contact me
+              If I may explain my hobbies shortly I like to play video games🎮
+              very much and I also like to take pictures and edit them. I would
+              like to be a photographer📸 one day. I also like to play Football
+              very much⚽. Phew..🤧 football has caused me a lot of injuries in
+              my lifetime. If you want to know more about me click the button
+              below to contact me
             </p>
             <a href="./intrest.html" class="btn btn-primary btn-lg"
               >My Intrests</a
