--- a/intrest.html
+++ b/intrest.html
@@ -97,8 +97,9 @@
               <h2>This is Mahi</h2>
               <p>a Web Developer</p>
               <p>
-                Ever since my chilhood i liked technologies.<br />I was always
-                passionated to be a developer. Specially graphic designer
+                Ever since my childhood, I liked technology. <br />
+                I was always passionate to be a developer. Especially graphic
+                designer
               </p>
               <a href="#about" class="btn btn-success btn-lg" href="#">More</a>
             </div>
@@ -110,9 +111,9 @@
             <div class="container">
               <h2>Gaming Passion</h2>
               <p>
-                Gaming is one of my favourite activities in my leisure time<br />
-                Belive it or not i have played too many games that even i am
-                always good in the new games i play without any experience.
+                Gaming is one of my favorite activities in my leisure time<br />
+                Believe it or not, I have played too many games that even I am
+                always good in the new games I play without any experience.
               </p>
               <a href="#gamePassion" class="btn btn-success btn-lg" href="#"
                 >More</a
@@ -126,10 +127,10 @@
             <div class="container">
               <h2>Travel</h2>
               <p>
-                Another passsioin that i have is to travel lots of places as
-                much as i can.I have a bucket list of the places i want to visit
-                and i will dedicate all my works to be able to travel those
-                places and explore new culture
+                another passion that I have is to travel to lots of places as
+                much as I can. I have a bucket list of the places I want to
+                visit and I will dedicate all my work to being able to travel to
+                those places and explore a new culture
               </p>
               <a href="#travel" class="btn btn-success btn-lg">More</a>
             </div>
@@ -177,17 +178,23 @@
             </div>
             <p>
               My Full Name is Mahi Abdulhakim Mohammed Abdullahi Ibrahim Mahi.
-              If you are wondering.I was born in Ethiopia and Grew up in a
-              beautifull City called<em
-                ><a href="#" class="home-city">Harar</a></em
-              >.Ever since my chilhood i always liked technologies,video games
-              and i always used to wonder how is it even possible to controll a
-              game character with some random controller. i always wanted to
-              know how these games or some programs are made.Destiny has led me
-              to know more about technologies. I more intrested on graphic
-              designing such as games,Websites,Editing Videos,Editing Photos and
-              so on... if you want to ask other information click the contact me
-              button to reach me.
+              If you are wondering. I was born in Ethiopia and Grew up in a
+              beautiful City called
+              <em
+                ><a
+                  href="https://en.wikipedia.org/wiki/Harar"
+                  target="_blank"
+                  class="home-city"
+                  >Harar</a
+                ></em
+              >. Ever since my childhood I always liked technology, and video
+              games and I always used to wonder how is it even possible to
+              control a game character with some random controller. I always
+              wanted to know how these games or some programs are made. Destiny
+              has led me to know more about technologies. I am more interested
+              in graphic designing such as games, Websites, Editing Videos,
+              Editing Photos, and so on... if you want to ask for other
+              information click the contact me button to reach me.
             </p>
             <a href="./contact.html" class="btn btn-warning btn-lg"
               >Contact Me</a
